--- a/examples/11-tooltips.html
+++ b/examples/11-tooltips.html
@@ -23,35 +23,46 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>Example 10 - Navigation</title>
+		<title>Example 11 - Tooltips</title>
 
 		<link rel="stylesheet" type="text/css" href="../css/agility-design.css" />
 		<link rel="stylesheet" href="../css/skins/default.css">
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="../js/agility-design.js"></script>
-		<style>
-			.navigation-arrow {
-				top: 56px;
-			}
-		</style>
 	</head>
 	<body class="fade-on-leave fade-on-load" fade-duration="0.25">
 		<a href="09-notifications.html" class="navigation-arrow color-blue left"></a>
-		<a href="11-tooltips.html" class="navigation-arrow color-blue right"></a>
-		<nav class="navbar navbar-red navbar-medium">
-			<img src="https://via.placeholder.com/150" class="icon"/>
-			<a class="navbar-item" href="../index.html">Index</a>
-			<a class="navbar-item" href="../examples/">Examples</a>
-			<p class="navbar-item">Text</p>
-		</nav>
 
 		<div class="title-container container">
-			<h1 class="title text-center">Example 10</h1>
-			<h1 class="subtitle text-center">Navigation</h1>
+			<h1 class="title text-center">Example 11</h1>
+			<h1 class="subtitle text-center">Tooltips</h1>
 		</div>
-		<div class="container" style="margin-bottom: 50em;">
-
+		<div class="container text-center">
+			<div class="container text-center">
+				<div class="tooltip tooltip-top">
+					Top
+					<p>Oh wow!</p>
+				</div>
+			</div>
+			<div class="container text-center">
+				<div class="tooltip tooltip-right">
+					Right
+					<p>Oh wow!</p>
+				</div>
+			</div>
+			<div class="container text-center">
+				<div class="tooltip tooltip-left">
+					Left
+					<p>Oh wow!</p>
+				</div>
+			</div>
+			<div class="container text-center">
+				<div class="tooltip tooltip-bottom">
+					Bottom
+					<p>Oh wow!</p>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
