Made tooltip rules more specific.

--- a/examples/11-tooltips.html
+++ b/examples/11-tooltips.html
@@ -42,25 +42,25 @@
 			<div class="container text-center">
 				<div class="tooltip tooltip-top">
 					Top
-					<p>Oh wow!</p>
+					<p class="tooltip-text">Oh wow!</p>
 				</div>
 			</div>
 			<div class="container text-center">
 				<div class="tooltip tooltip-right">
 					Right
-					<p>Oh wow!</p>
+					<p class="tooltip-text">Oh wow!</p>
 				</div>
 			</div>
 			<div class="container text-center">
 				<div class="tooltip tooltip-left">
 					Left
-					<p>Oh wow!</p>
+					<p class="tooltip-text">Oh wow!</p>
 				</div>
 			</div>
 			<div class="container text-center">
 				<div class="tooltip tooltip-bottom">
 					Bottom
-					<p>Oh wow!</p>
+					<p class="tooltip-text">Oh wow!</p>
 				</div>
 			</div>
 		</div>
